# avro

./: CMakeLists.txt  meson.build
lang/c++/: meson.build
lang/c++/include-workaround-meson/avro/: meson.build
lang/c++/include-workaround-meson/avro/buffer/: meson.build
lang/c++/include-workaround-meson/avro/buffer/detail/: meson.build
